refactor(service): replace collect(Collectors.toList()) with Stream.toList() in RecipeService